--- a/ex-1/B-numpy-features.ipynb
+++ b/ex-1/B-numpy-features.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "9474b5d2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
    "id": "8d71d046",
    "metadata": {},
    "source": [
-    "### Why NumPy? Python Lists vs. NumPy Arrays\n",
+    "### 2. Why NumPy? Python Lists vs. NumPy Arrays\n",
     "\n",
     "Python is a dynamically-typed language. This means a single Python list can hold different types of data (e.g., integers, strings, etc.). This flexibility is powerful, but it comes at a cost: each item in the list is a complex C structure that includes its value, its type, and a reference count.\n",
     "\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "55067fe7",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "187 ns ± 0.539 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "181 ns ± 3.56 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "bd845aff",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.07 μs ± 3.42 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "2.1 μs ± 64.8 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -127,15 +127,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8235f23c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "00a08557",
    "metadata": {},
    "source": [
-    "### הגעתי לכאן!!!"
+    "### 3. Creating NumPy Arrays from Lists\n",
+    "\n",
+    "NumPy arrays can be created from Python lists using `np.array()`.\n",
+    "\n",
+    "This is one of the most common ways to create arrays when you have existing data. The array will automatically infer the data type from the list elements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6f8fb401",
    "metadata": {},
    "outputs": [
@@ -149,33 +159,13 @@
    ],
    "source": [
     "# Create an array from a list\n",
-    "arr = np.array([1, 4, 2, 5, 3])\n",
+    "arr = np.array([1, 2, 3, 4])\n",
     "print(\"Array from list:\", arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f844b230",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Array with upcasting (int -> float): [3.14 4.   2.   3.  ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# NumPy will \"upcast\" types if necessary\n",
-    "arr = np.array([3.14, 4, 2, 3])\n",
-    "print(Array with upcasting (int -> float), arr)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "38cd668b",
    "metadata": {},
    "outputs": [
@@ -195,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d46fbc23",
    "metadata": {},
    "outputs": [
@@ -203,19 +193,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array of 10 zeros: [0 0 0 0 0 0 0 0 0 0]\n"
+      "Array of 10 zeros: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
      ]
     }
    ],
    "source": [
-    "# Create an array of zeros\n",
-    "zeros = np.zeros(10, dtype=int)\n",
-    "print(\"Array of 10 zeros:\", zeros)"
+    "# Create an array of zeros (default dtype is float)\n",
+    "zeros = np.zeros(10) \n",
+    "print(\"Array of 10 zeros:\", zeros) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "222f5e3f",
    "metadata": {},
    "outputs": [
@@ -224,15 +214,15 @@
      "output_type": "stream",
      "text": [
       "3x5 array of ones:\n",
-      "[[1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1.]]\n"
+      " [[1 1 1 1 1]\n",
+      " [1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n"
      ]
     }
    ],
    "source": [
     "# Create a 3x5 array of ones\n",
-    "ones = np.ones((3, 5), dtype=float)\n",
+    "ones = np.ones((3, 5), dtype=int)\n",
     "print(\"3x5 array of ones:\\n\", ones)"
    ]
   },
@@ -284,22 +274,68 @@
    "id": "d9c278a8",
    "metadata": {},
    "source": [
-    "### ndim, shape, size, and Reshaping\n",
+    "### 4. ndim, shape and size\n",
     "\n",
     "NumPy arrays have attributes that describe their dimensions and size.\n",
     "\n",
-    "ndim: The number of dimensions.\n",
+    "`ndim`: The number of dimensions.\n",
     "\n",
-    "shape: The size of each dimension.\n",
+    "`shape`: The size of each dimension.\n",
     "\n",
-    "size: The total number of elements in the array.\n",
-    "\n",
-    "You can also reshape an array, which is very useful."
+    "`size`: The total number of elements in the array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
+   "id": "00ea416f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1 ndim: 1\n",
+      "x1 shape: (4,)\n",
+      "x1 size: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = np.array([1, 2, 3, 4])\n",
+    "\n",
+    "print(f\"x1 ndim: {x1.ndim}\")\n",
+    "print(f\"x1 shape: {x1.shape}\")\n",
+    "print(f\"x1 size: {x1.size}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "22be4b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x2 ndim: 2\n",
+      "x2 shape: (4, 2)\n",
+      "x2 size: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "x2 = np.array([[1, 2], [3, 4], [5, 6], [7, 8]])\n",
+    "\n",
+    "print(f\"x2 ndim: {x2.ndim}\")\n",
+    "print(f\"x2 shape: {x2.shape}\")\n",
+    "print(f\"x2 size: {x2.size}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "436bc6ed",
    "metadata": {},
    "outputs": [
@@ -323,50 +359,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "16263235",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original 1D array: [0 1 2 3 4 5 6 7 8]\n",
-      "Reshaped 3x3 array:\n",
-      "[[0 1 2]\n",
-      " [3 4 5]\n",
-      " [6 7 8]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Reshaping is common\n",
-    "# Create a 1D array of 9 numbers\n",
-    "arr = np.arange(9)\n",
-    "print(f\"Original 1D array: {arr}\")\n",
-    "\n",
-    "# Reshape it into a 3x3 array\n",
-    "grid = arr.reshape((3, 3))\n",
-    "print(f\"Reshaped 3x3 array:\\n{grid}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5e5ae13f",
    "metadata": {},
    "source": [
-    "### Array Indexing and Slicing\n",
+    "### 5. Array Indexing and Slicing\n",
     "Accessing elements is similar to Python lists, but you can use comma-separated indices for multiple dimensions.\n",
     "\n",
-    "CRITICAL NOTE: Unlike Python lists, NumPy array slices are views, not copies. Modifying a slice will modify the original array.\n",
+    "You can also slice the array, which is very useful.\n",
     "\n",
-    "להביא דוגמא מהשיעור"
+    "> CRITICAL NOTE: Unlike Python lists, NumPy array slices are views, not copies. Modifying a slice will modify the original array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4701f613",
    "metadata": {},
    "outputs": [
@@ -402,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "1fd1b0c9",
    "metadata": {},
    "outputs": [
@@ -437,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "5544b8eb",
    "metadata": {},
    "outputs": [
@@ -470,17 +477,55 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be853320",
+   "id": "8d887fc7",
    "metadata": {},
    "source": [
-    "### Array Concatenation\n",
+    "### 6. Reshaping Arrays\n",
     "\n",
-    "You can combine arrays using np.concatenate. "
+    "NumPy arrays can be reshaped. This is useful when you want to change the dimensions of an array without changing its data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "id": "16263235",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original 1D array: [0 1 2 3 4 5 6 7 8]\n",
+      "Reshaped 3x3 array:\n",
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a 1D array of 9 numbers\n",
+    "arr = np.arange(9)  # arange is like range in python\n",
+    "print(f\"Original 1D array: {arr}\")\n",
+    "\n",
+    "# Reshape it into a 3x3 array\n",
+    "grid = arr.reshape((3, 3))\n",
+    "print(f\"Reshaped 3x3 array:\\n{grid}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be853320",
+   "metadata": {},
+   "source": [
+    "### 7. Array Concatenation\n",
+    "\n",
+    "You can combine arrays using `np.concatenate`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f8d83785",
    "metadata": {},
    "outputs": [
@@ -502,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "a379c9f2",
    "metadata": {},
    "outputs": [
@@ -513,51 +558,13 @@
       "\n",
       "Original grid:\n",
       "[[1 2 3]\n",
-      " [4 5 6]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Concatenate 2D arrays (grid)\n",
-    "grid = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "print(f\"\\nOriginal grid:\\n{grid}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "4985a6da",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " [4 5 6]]\n",
       "\n",
       "Concatenated axis=0:\n",
       "[[1 2 3]\n",
       " [4 5 6]\n",
       " [1 2 3]\n",
-      " [4 5 6]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Concatenate along the first axis (rows, axis=0)\n",
-    "grid_ax0 = np.concatenate([grid, grid], axis=0)\n",
-    "print(f\"\\nConcatenated axis=0:\\n{grid_ax0}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "7826faf7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " [4 5 6]]\n",
       "\n",
       "Concatenated axis=1:\n",
       "[[1 2 3 1 2 3]\n",
@@ -566,6 +573,14 @@
     }
    ],
    "source": [
+    "# Concatenate 2D arrays (grid)\n",
+    "grid = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(f\"\\nOriginal grid:\\n{grid}\")\n",
+    "\n",
+    "# Concatenate along the first axis (rows, axis=0)\n",
+    "grid_ax0 = np.concatenate([grid, grid], axis=0)\n",
+    "print(f\"\\nConcatenated axis=0:\\n{grid_ax0}\")\n",
+    "\n",
     "# Concatenate along the second axis (columns, axis=1)\n",
     "grid_ax1 = np.concatenate([grid, grid], axis=1)\n",
     "print(f\"\\nConcatenated axis=1:\\n{grid_ax1}\")"
@@ -573,17 +588,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c23a8b",
+   "id": "1773b649",
    "metadata": {},
    "source": [
-    "### Array Splitting\n",
-    "\n",
-    "You can also split them using np.split."
+    "> Pay Attention: In python, you can concatenat list with `+` operator, but in NumPy, you should use `np.concatenate`, cause `+` operator performs element-wise addition..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
+   "id": "90bff6db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ([1,2,3]+[4,5,6])\n",
+    "print (np.array([1,2,3])+np.array([4,5,6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8c23a8b",
+   "metadata": {},
+   "source": [
+    "### 8. Array Splitting\n",
+    "\n",
+    "You can also split an array using `np.split`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1d3fe1f3",
    "metadata": {},
    "outputs": [
@@ -613,16 +656,14 @@
    "id": "e33981b7",
    "metadata": {},
    "source": [
-    "### Universal Functions (ufuncs)\n",
-    "\n",
-    "The key to NumPy's speed is vectorized operations, implemented via \"ufuncs\".\n",
+    "### 9. Universal Functions (ufuncs)\n",
     "\n",
     "Instead of writing a slow Python loop, you can apply operations element-by-element on the entire array at once. This is much faster because the loop happens in C, not Python ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "7b568fce",
    "metadata": {},
    "outputs": [
@@ -630,8 +671,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slow Python loop: [0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
-      "Fast NumPy ufunc: [ 0  2  4  6  8 10 12 14 16 18]\n"
+      "3.74 μs ± 39.7 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -643,17 +683,45 @@
     "        output.append(val * factor)\n",
     "    return output\n",
     "\n",
-    "values_list = list(range(10))\n",
-    "print(f\"Slow Python loop: {multiply(values_list, 2)}\")\n",
+    "values_list = list(range(100))\n",
     "\n",
-    "# This is the fast NumPy way (using a ufunc)\n",
-    "values_arr = np.arange(10)\n",
-    "print(f\"Fast NumPy ufunc: {values_arr * 2}\")"
+    "%timeit multiply(values_list, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
+   "id": "d041b672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "777 ns ± 2.32 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is the fast NumPy way (using a ufunc)\n",
+    "values_arr = np.arange(100)\n",
+    "\n",
+    "%timeit values_arr * 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3de2054",
+   "metadata": {},
+   "source": [
+    "You can apply arithmetic operations to two arrays of the same shape without writing loops. Ufuncs also extend naturally to multi-dimensional arrays, allowing efficient and expressive mathematical computations.\n",
+    "\n",
+    "Here's an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "5b1351e5",
    "metadata": {},
    "outputs": [
@@ -661,8 +729,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2 3 4] + [1 2 3 4 5] = [1 3 5 7 9]\n",
-      "[0 1 2 3 4] / [1 2 3 4 5] = [0.         0.5        0.66666667 0.75       0.8       ]\n",
+      "[12 10 98] + [2 5 7] = [ 14  15 105]\n",
+      "[12 10 98] / [2 5 7] = [ 6.  2. 14.]\n",
       "\n",
       "2D array:\n",
       "[[0 1 2]\n",
@@ -678,8 +746,8 @@
    ],
    "source": [
     "# Ufuncs work between two arrays as well\n",
-    "arr1 = np.arange(5)\n",
-    "arr2 = np.arange(1, 6)\n",
+    "arr1 = np.array([12,10,98])\n",
+    "arr2 = np.array([2,5,7])\n",
     "\n",
     "print(f\"{arr1} + {arr2} = {arr1 + arr2}\")\n",
     "print(f\"{arr1} / {arr2} = {arr1 / arr2}\")\n",
@@ -695,7 +763,7 @@
    "id": "9a6e4f4b",
    "metadata": {},
    "source": [
-    "### Aggregations (Sum, Min, Max, etc.)\n",
+    "### 10. Aggregations (Sum, Min, Max, etc.)\n",
     "\n",
     "Aggregations are functions that summarize the values in an array. A key concept here is the axis keyword.\n",
     "\n",
@@ -706,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "0d5566ec",
    "metadata": {},
    "outputs": [
@@ -737,14 +805,14 @@
    "id": "a321a5f6",
    "metadata": {},
    "source": [
-    "### Broadcasting\n",
+    "### 11. Broadcasting\n",
     "\n",
     "Broadcasting is a set of rules for applying binary ufuncs (like addition) on arrays of different sizes. NumPy \"stretches\" the smaller array to match the larger one, if the dimensions are compatible."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "0c6e7594",
    "metadata": {},
    "outputs": [
@@ -761,12 +829,12 @@
     "# Array and a scalar\n",
     "a = np.array([0, 1, 2])\n",
     "print(f\"a: {a}\")\n",
-    "print(f\"a + 5: {a + 5}\")  # 5 is \"broadcast\" to [5, 5, 5]"
+    "print(f\"a + 5: {a + [5]}\")  # 5 is \"broadcast\" to [5, 5, 5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "8c791b24",
    "metadata": {},
    "outputs": [
@@ -801,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "5b6ab057",
    "metadata": {},
    "outputs": [
@@ -840,7 +908,7 @@
    "id": "36cbb286",
    "metadata": {},
    "source": [
-    "### Comparison Operators and Fancy Indexing\n",
+    "### 12. Comparison Operators and Fancy Indexing\n",
     "\n",
     "Comparison operators (like < or >) are also ufuncs. They return a boolean array.\n",
     "\n",
@@ -851,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "9f96524f",
    "metadata": {},
    "outputs": [
@@ -879,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "976d8144",
    "metadata": {},
    "outputs": [
@@ -903,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "42b399d5",
    "metadata": {},
    "outputs": [
