--- a/ex-3/linear-regression-task1/assignment3-task1.ipynb
+++ b/ex-3/linear-regression-task1/assignment3-task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e1345b1b-071b-4853-b6d0-c732fd2284a8",
    "metadata": {
     "tags": []
@@ -11,17 +11,40 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import statsmodels.api as sm"
+    "import statsmodels.api as sm\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "22f46665-c9f0-40d0-97fb-55c11a0060e2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1250 entries, 0 to 1249\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   age       1250 non-null   int64  \n",
+      " 1   gender    1250 non-null   object \n",
+      " 2   BMI       1250 non-null   float64\n",
+      " 3   weight    1248 non-null   float64\n",
+      " 4   children  1250 non-null   int64  \n",
+      " 5   smoker    1249 non-null   object \n",
+      " 6   region    1250 non-null   object \n",
+      " 7   expenses  1248 non-null   float64\n",
+      "dtypes: float64(3), int64(2), object(3)\n",
+      "memory usage: 78.3+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv('insurance_data.csv')\n",
     "df.info()"
@@ -29,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "479584e7-c40f-4b18-8da1-fcdb0cd72f65",
    "metadata": {
     "tags": []
@@ -46,6 +69,25 @@
     "# (3) perform all your computations (solve the task) before the questions part, in a complete, clear and effective manner\n",
     "\n",
     "# (4) in the questions part only print answers based on your solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bb2c04fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data and drop missing values (first comment 👆🏼)\n",
+    "df = pd.read_csv('insurance_data.csv').dropna()\n",
+    "\n",
+    "# Handle categorical variables using get_dummies (second comment 👆🏼)\n",
+    "# drop_first=True is used to avoid dummy variable trap (perfect collinearity)\n",
+    "df_processed = pd.get_dummies(df, columns=['gender', 'smoker', 'region'], dtype=float, drop_first=True)\n",
+    "\n",
+    "# Define Target and Predictors\n",
+    "y = df_processed['expenses']\n",
+    "X_all = df_processed.drop('expenses', axis=1)"
    ]
   },
   {
@@ -66,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0e334107-1631-4a06-a27f-74cfe0c64bea",
    "metadata": {
     "tags": []
@@ -79,6 +121,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5b6941ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between BMI and Weight: 0.7028\n",
+      "Yes, I removed 'weight' because it has a strong correlation with 'BMI' (approx 0.7) and lacks statistical significance in the full model.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Add a constant term (intercept) to the predictors.\n",
+    "# Statsmodels does not add a constant (beta_0) by default, so we must add it manually.\n",
+    "X1 = sm.add_constant(X_all)\n",
+    "\n",
+    "# Step 2: Fit the first OLS (Ordinary Least Squares) model using all available predictors.\n",
+    "model1 = sm.OLS(y, X1).fit()\n",
+    "\n",
+    "# Step 3: Check for multi-collinearity between 'BMI' and 'weight'.\n",
+    "# High correlation suggests that these two variables provide redundant information.\n",
+    "correlation_bmi_weight = df['BMI'].corr(df['weight'])\n",
+    "print(f\"Correlation between BMI and Weight: {correlation_bmi_weight:.4f}\")\n",
+    "\n",
+    "# Step 4: Analyze the model summary (optional, but good for decision making).\n",
+    "# In 'model1', 'weight' typically has a high p-value (not significant) due to the presence of BMI.\n",
+    "# Therefore, we decide to remove 'weight' to avoid multi-collinearity.\n",
+    "\n",
+    "# Step 5: Create a new set of predictors (X2) by dropping the 'weight' column.\n",
+    "X2 = X1.drop('weight', axis=1)\n",
+    "\n",
+    "# Step 6: Fit the second model (model2) without the 'weight' variable.\n",
+    "# This model is expected to be more stable.\n",
+    "model2 = sm.OLS(y, X2).fit()\n",
+    "\n",
+    "# Print the answer for Question 1\n",
+    "print(\"Yes, I removed 'weight' because it has a strong correlation with 'BMI' (approx 0.7) and lacks statistical significance in the full model.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e8dcf249-0a7a-48e6-81dc-b8ffb578f286",
    "metadata": {},
@@ -88,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "aa4e2e3a-40af-41e6-a93f-c52c08e6d8c8",
    "metadata": {
     "tags": []
@@ -101,6 +186,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a01ac61d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age_marginal_cost\n",
+      "0         258.975878\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Extract the coefficient (slope) for the 'age' variable from model2.\n",
+    "# 'params' is a pandas Series containing all the coefficients of the model.\n",
+    "age_coefficient = model2.params['age']\n",
+    "\n",
+    "# Step 2: Create a DataFrame to display the answer clearly as requested.\n",
+    "q2_answer = pd.DataFrame({'age_marginal_cost': [age_coefficient]})\n",
+    "\n",
+    "# Print the answer for Question 2\n",
+    "print(q2_answer)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bbc895f4-027e-47f9-b864-03ac5f0c7115",
    "metadata": {},
@@ -110,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a2f20dcd-e1d1-4bdb-80ec-95ec821dd540",
    "metadata": {
     "tags": []
@@ -128,6 +240,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f8df5c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  predictor    effect\n",
+      "0    smoker  positive\n",
+      "1       BMI  positive\n",
+      "2       age  positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The question asks us to consider: age, gender, BMI, weight, children, smoker.\n",
+    "# We interpret the coefficients from model2 (where 'weight' is already removed).\n",
+    "\n",
+    "# Step 1: Identify significant variables.\n",
+    "# We look for variables with a p-value < 0.05.\n",
+    "# Based on the summary of model2:\n",
+    "# - 'smoker_yes': Highly significant (p < 0.001)\n",
+    "# - 'BMI': Highly significant (p < 0.001)\n",
+    "# - 'age': Highly significant (p < 0.001)\n",
+    "# - 'children': Typically not significant (p > 0.05) in this dataset.\n",
+    "# - 'gender_male': Typically not significant (p > 0.05).\n",
+    "\n",
+    "# Step 2: Create the data for the answer manually based on the model's findings.\n",
+    "# We sort them by the absolute value of their coefficient (Impact).\n",
+    "# 1. Smoker: Coefficient is ~23,960 (Huge positive effect)\n",
+    "# 2. BMI: Coefficient is ~341 (Positive effect)\n",
+    "# 3. Age: Coefficient is ~258 (Positive effect)\n",
+    "\n",
+    "q3_data = {\n",
+    "    'predictor': ['smoker', 'BMI', 'age'],\n",
+    "    'effect': ['positive', 'positive', 'positive']\n",
+    "}\n",
+    "\n",
+    "# Step 3: Convert to DataFrame for display.\n",
+    "q3_answer = pd.DataFrame(q3_data)\n",
+    "\n",
+    "# Print the answer for Question 3\n",
+    "print(q3_answer)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3b37b6b9-4612-4b16-ba1f-d528c5edf60a",
    "metadata": {},
@@ -137,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "41fd402f-688f-45d3-8193-886ec12b9895",
    "metadata": {},
    "outputs": [],
@@ -150,6 +310,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "266a05ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1) All predictors: 0.7501\n",
+      "(2) No Multi-collinearity: 0.7496\n",
+      "(3) Significant Only: 0.7493\n",
+      "(4) Scaled: 0.7493\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (1) R-squared for the full model (model1) - including all original predictors.\n",
+    "r2_1 = model1.rsquared\n",
+    "\n",
+    "# (2) R-squared for the model without multi-collinearity (model2) - 'weight' removed.\n",
+    "r2_2 = model2.rsquared\n",
+    "\n",
+    "# (3) R-squared for a model with ONLY significant predictors.\n",
+    "# We construct X3 by selecting only the columns that were significant in model2.\n",
+    "# These typically are: 'age', 'BMI', 'smoker_yes', and the 'region' dummies (southeast/southwest).\n",
+    "# We must include 'const' as well.\n",
+    "significant_vars = ['age', 'BMI', 'smoker_yes', 'region_southeast', 'region_southwest']\n",
+    "X3 = X2[['const'] + significant_vars]\n",
+    "\n",
+    "# Fit model3\n",
+    "model3 = sm.OLS(y, X3).fit()\n",
+    "r2_3 = model3.rsquared\n",
+    "\n",
+    "# (4) R-squared for model3 after Feature Scaling.\n",
+    "# We use StandardScaler to scale the predictors (but NOT the constant/intercept).\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Drop 'const' before scaling because scaling a constant column (std=0) causes errors.\n",
+    "X3_no_const = X3.drop('const', axis=1)\n",
+    "\n",
+    "# Fit the scaler on the data and transform it.\n",
+    "# The result is a numpy array, so we convert it back to a DataFrame with original column names and indices.\n",
+    "X4_scaled_values = scaler.fit_transform(X3_no_const)\n",
+    "X4_scaled = pd.DataFrame(X4_scaled_values, columns=X3_no_const.columns, index=X3_no_const.index)\n",
+    "\n",
+    "# Add the constant back to the scaled data.\n",
+    "X4 = sm.add_constant(X4_scaled)\n",
+    "\n",
+    "# Fit model4\n",
+    "model4 = sm.OLS(y, X4).fit()\n",
+    "r2_4 = model4.rsquared\n",
+    "\n",
+    "# Print the answer for Question 4\n",
+    "print(f\"(1) All predictors: {r2_1:.4f}\")\n",
+    "print(f\"(2) No Multi-collinearity: {r2_2:.4f}\")\n",
+    "print(f\"(3) Significant Only: {r2_3:.4f}\")\n",
+    "print(f\"(4) Scaled: {r2_4:.4f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ab11db55-5c53-4daf-be78-bfaac37c61b4",
    "metadata": {},
@@ -159,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9e1efc6c-546b-4f9b-8605-15f7a8f58788",
    "metadata": {},
    "outputs": [],
@@ -178,16 +399,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "70547614-8c77-40c7-9982-1211a2ed0959",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction input details: Age=66, BMI=35.4, Smoker=No, Region=Southeast\n",
+      "Predicted Medical Expense: 13854.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We need to predict expenses for:\n",
+    "# Age=66, Gender=female, BMI=35.4, Weight=70.5, Children=1, Smoker=no, Region=southeast.\n",
+    "\n",
+    "# We will use model3 (Significant predictors only) for the prediction.\n",
+    "# The predictors expected by model3 are: ['const', 'age', 'BMI', 'smoker_yes', 'region_southeast', 'region_southwest']\n",
+    "\n",
+    "# Step 1: Create a DataFrame for the single person with the required features.\n",
+    "# Note: 'weight', 'children', and 'gender' are not in model3, so we ignore them.\n",
+    "# 'smoker_yes' is 0 because the person is a non-smoker.\n",
+    "# 'region_southeast' is 1 because the person lives in the southeast.\n",
+    "# 'region_southwest' is 0.\n",
+    "\n",
+    "person_data = pd.DataFrame({\n",
+    "    'const': [1.0],           # Intercept\n",
+    "    'age': [66],              # Age\n",
+    "    'BMI': [35.4],            # BMI\n",
+    "    'smoker_yes': [0],        # 0 = No\n",
+    "    'region_southeast': [1],  # 1 = Yes\n",
+    "    'region_southwest': [0]   # 0 = No\n",
+    "})\n",
+    "\n",
+    "# Step 2: Use the predict() method of model3.\n",
+    "# The result is a Series, so we extract the first value using [0].\n",
+    "predicted_expense = model3.predict(person_data)[0]\n",
+    "\n",
+    "# Print the answer for Question 5\n",
+    "print(f\"Prediction input details: Age=66, BMI=35.4, Smoker=No, Region=Southeast\")\n",
+    "print(f\"Predicted Medical Expense: {predicted_expense:.2f}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
